<?xml version="1.0"?>
<package format="3">
  <name>ros2_docker</name>
  <version>0.0.1</version>
  <description>Example ROS 2 package with client-server service to sum integers</description>

  <maintainer email="milistefanos@hotmail.com">Stefanos Miliotis</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>rosidl_default_generators</depend>

  <!-- Runtime dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Group for interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>